tests/ui/resolve/proc_macro_generated_packed.stderr
error: internal compiler error: compiler/rustc_mir_transform/src/check_packed_ref.rs:LL:CC: builtin derive created an unaligned reference
  --> $DIR/proc_macro_generated_packed.rs:18:25
   |
LL | #[derive(PartialEq)]
   |          --------- in this derive macro expansion
...
LL | struct Dealigned<T>(u8, T);
   |                         ^
   |
   = Box<dyn Any>
query stack during panic:
#0 [mir_const] preparing `<impl at $DIR/proc_macro_generated_packed.rs:15:10: 15:19>::eq` for borrow checking
#1 [mir_promoted] promoting constants in MIR for `<impl at $DIR/proc_macro_generated_packed.rs:15:10: 15:19>::eq`
end of query stack
error: aborting due to 1 previous error

